# automated-trading

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yaml  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  environment.yml  install-conda-dev  install.sh  install_conda_dev.sh  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
algotradeib/: ib_broker.py  ib_connector.py  ib_streamer.py  ib_utils.py
algotradepy/: _version.py  brokers.py  contracts.py  docstring_utils.py  ib_utils.py  objects.py  order_conditions.py  orders.py  path_utils.py  position.py  sim_utils.py  subscribable.py  tick.py  time_utils.py  trade.py  utils.py
algotradepy/algos/: sma.py  sme.py
algotradepy/brokers/: __init__.py  base.py  ib_broker.py  sim_broker.py
algotradepy/connectors/: __init__.py  ib_connector.py  iex_connector.py  utils.py  (+1 more)
autotrade/: CMakeLists.txt
autotrade/tests/testIBJts/: CMakeLists.txt  basicOps.cpp
autotrade/tests/testSrc/testDataStructs/: CMakeLists.txt  testBar.cpp
autotrade/tests/testSrc/testUtils/: CMakeLists.txt  testTimeUtils.cpp
docs/: base_modules.rst  conf.py  contracts.rst  index.rst  orders.rst  trade.rst
examples/: ib_orders_monitoring.py
notebooks/: sme.ipynb
other_scripts/: get-conda-bin  pre-push
scripts/: pre-push
test_scripts/: ib_tests_run_ts  run_ib_tests.sh
tests/: conftest.py  contracts.py  test_brokers.py  test_contracts.py  test_historical.py  test_sim_utils.py
tests_ib/: test_ib_broker.py  test_ib_connector.py  test_ib_streamer.py
tools/: aggregator.py  downloader.py  sme_optimization.py
(+163 files in other folders)
